# AndroidProject

./: build.gradle  index.js  package-lock.json  package.json  settings.gradle  临时记录.pages  面试问题笔记.txt
app/: CMakeLists.txt  build.gradle  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/schemas/com.example.songzeceng.studyoflivedata.room.DatabaseCreator/: 1.json
app/src/androidTest/java/applicationmanager/com/example/a123/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/client/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/fileencryptanddecryptndk/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/firstjd/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/myndkdemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/scrollconfiction/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/studyofdagger2/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/studyoflivedata/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/studyofpermissions/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/songzeceng/studyofretrofit/: MyTestActivity.java  TestClass.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/applicationmanager/com/example/a123/: BActivity.java  BaseWorker.java  CalculateWorker.java  Constants.java  IHandler.java  Logger.java  MainActivity.java  Master.java  MyBroadCastReciever.java  MyReceiveService.java  WeakHandler.java
app/src/main/java/com/example/songzeceng/client/: IHandler.java  MainActivity.java  MyIntentService.java  (+4 more)
app/src/main/jni/: my_ndk_util.c  my_ndk_util.h  person_ndk_util.c  person_ndk_util.h
app/src/main/jni/ndk1/: CMakeLists.txt  ndk1.cpp
app/src/main/jni/ndk2/: CMakeLists.txt  ndk2.cpp
app/src/main/proto/: first.proto
app/src/main/res/drawable/: toast_background.xml
app/src/main/res/layout/: activity_liveness.xml  activity_liveness_2.xml  activity_main.xml  activity_main_2.xml  activity_main_3.xml  activity_screen_lock.xml  dialog_layout.xml  item_recycler.xml  layout_main_fragment.xml  list_item.xml  my_header.xml  regist_dialog.xml  toast_layout.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: apkpath.xml  updatepath.xml
(+205 files in other folders)
